Prevent title from overflowing

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -143,7 +143,11 @@ html {
           padding-bottom: 15px;
 
           .contentTitle {
+            max-width: 85%;
+            display: inline-flex;
             font-weight: bold;
+            overflow-y: hidden;
+            max-height: 18px;
           }
 
           .contentTimestamp {
